# Mizzou-Dining-CLI

./: .gitignore  MizzouDining.cpp  README.md  build.sh  build_httplib.sh  httplib.cc  httplib.h  locations.html
archive/: CMakeLists.txt
